--- a/nyx-fec/Cargo.toml
+++ b/nyx-fec/Cargo.toml
@@ -9,3 +9,6 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 reed-solomon-erasure = "6"
 nyx-core = { path = "../nyx-core" }
+tokio = { version = "1.37", features = ["time", "sync", "rt"] }
+rand = "0.8"
+rand_distr = "0.4"
