--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "nyx-mix",
     "nyx-fec",
     "nyx-stream",
+    # "nyx-control",  # Temporarily excluded until protoc is bundled
 ]
 resolver = "2"
 
