feat(telemetry): introduce nyx-telemetry crate with Prometheus exporter and update TODO

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "nyx-mix",
     "nyx-fec",
     "nyx-stream",
+    "nyx-telemetry", # Prometheus exporter crate
     # "nyx-control",  # Temporarily excluded until protoc is bundled
 ]
 resolver = "2"
