--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -11,4 +11,6 @@ prometheus = "0.13"
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
 tracing = "0.1"
-once_cell = "1.19" 
+once_cell = "1.19"
+tracing-subscriber = "0.3"
+tracing-bunyan-formatter = "0.3" 
