--- a/nyx-control/Cargo.toml
+++ b/nyx-control/Cargo.toml
@@ -7,6 +7,7 @@ description = "Nyx control plane: DHT and settings sync"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-libp2p = { version = "0.49", default-features = false, features = ["kad", "tcp-async-io", "dns-async-std", "async-std"] }
+libp2p = { version = "0.49", default-features = false, features = ["kad", "tcp-tokio", "dns-tokio", "macros"] }
 nyx-core = { path = "../nyx-core" }
-async-std = { version = "1", features = ["attributes"] }
+tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
+futures = "0.3"
