sec(zeroize): introduce SessionKey that zeroizes on drop; complete secrets audit task

--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -21,3 +21,4 @@ pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits
 
 [dev-dependencies]
 hex-literal = "0.4"
+zeroize = { version = "1", features=["zeroize_derive"] }
