--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -13,4 +13,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"
 tracing = "0.1"
 once_cell = "1.19"
 tracing-subscriber = "0.3"
-tracing-bunyan-formatter = "0.3" 
+tracing-bunyan-formatter = "0.3"
+opentelemetry = { version = "0.21", features=["rt-tokio"] }
+opentelemetry-otlp = { version = "0.14", features=["grpc-sys"] }
+tracing-opentelemetry = "0.22" 
