--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,4 +91,15 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: nyx-chart
-          path: chart-dist/*.tgz 
+          path: chart-dist/*.tgz
+
+  dashboards:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Upload Grafana dashboards
+        uses: actions/upload-artifact@v3
+        with:
+          name: grafana-dashboards
+          path: grafana/dashboards/*.json 
