--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 [features]
 # Enable post-quantum Kyber fallback.
 pq = ["pqcrypto-kyber", "pqcrypto-traits"]
+bench = ["criterion", "criterion-cmp"]
 
 [dependencies]
 x25519-dalek = "2.0"
@@ -22,3 +23,5 @@ pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits
 [dev-dependencies]
 hex-literal = "0.4"
 zeroize = { version = "1", features=["zeroize_derive"] }
+criterion = { version = "0.5", optional = true }
+criterion-cmp = { version = "0.4", optional = true }
