--- a/nyx-core/Cargo.toml
+++ b/nyx-core/Cargo.toml
@@ -14,6 +14,10 @@ tracing = "0.1"
 tokio = { version = "1.37", features = ["full"] }
 notify = { version = "6.1" }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+seccomp = "0.3"
+anyhow = "1"
+
 [dev-dependencies]
 hex-literal = "0.4"
 
