--- a/nyx-fec/Cargo.toml
+++ b/nyx-fec/Cargo.toml
@@ -12,3 +12,10 @@ nyx-core = { path = "../nyx-core" }
 tokio = { version = "1.37", features = ["time", "sync", "rt"] }
 rand = "0.8"
 rand_distr = "0.4"
+
+[features]
+# Enable C/assembly SIMD acceleration in reed-solomon-erasure when available.
+simd = ["reed-solomon-erasure/simd-accel"]
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
