--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -17,3 +17,8 @@ tracing-bunyan-formatter = "0.3"
 opentelemetry = { version = "0.21", features=["rt-tokio"] }
 opentelemetry-otlp = { version = "0.14", features=["grpc-sys"] }
 tracing-opentelemetry = "0.22" 
+pprof = { version = "0.11", features = ["flamegraph"], optional = true }
+chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }
+
+[features]
+flamegraph = ["pprof", "chrono"] 
