--- a/nyx-fec/Cargo.toml
+++ b/nyx-fec/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 description = "Nyx Reed-Solomon FEC wrapper for 1280B fixed packets"
 license = "MIT OR Apache-2.0"
 
+[package.metadata.docs.rs]
+features = ["simd"]
+
 [dependencies]
 reed-solomon-erasure = "6"
 nyx-core = { path = "../nyx-core" }
