--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -22,3 +22,6 @@ chrono = { version = "0.4", default-features = false, features = ["std"], option
 
 [features]
 flamegraph = ["pprof", "chrono"] 
+
+[package.metadata.docs.rs]
+features = ["flamegraph"] 
