docs(i18n): enable multilingual MkDocs with static-i18n plugin and English/Chinese landing pages; update workflow and TODO

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,3 +22,11 @@ markdown_extensions:
   - admonition
   - codehilite
   - pymdownx.extra 
+plugins:
+  - search
+  - i18n:
+      default_language: ja
+      languages:
+        ja: 日本語
+        en: English
+        zh: 中文 
