--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.x'
       - name: Install MkDocs
         run: |
-          pip install mkdocs-material
+          pip install mkdocs-material mkdocs-static-i18n
       - name: Build site
         run: |
           mkdocs build --strict
