test(conformance): add nyx-conformance crate with initial Noise_Nyx handshake vector (1/120)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "nyx-telemetry", # Prometheus exporter crate
     "nyx-control",
     "nyx-sdk-wasm",
+    "nyx-conformance",
 ]
 resolver = "2"
 
