--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT OR Apache-2.0"
 [features]
 # Enable post-quantum Kyber fallback.
 pq = ["pqcrypto-kyber", "pqcrypto-traits"]
-bench = ["criterion", "criterion-cmp"]
+bench = ["criterion"]
 
 [dependencies]
 x25519-dalek = "2.0"
@@ -19,9 +19,8 @@ hkdf = "0.12"
 rand_core = { version = "0.6", features = ["getrandom"] }
 pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
 pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
+criterion = { version = "0.5", optional = true }
 
 [dev-dependencies]
 hex-literal = "0.4"
 zeroize = { version = "1", features=["zeroize_derive"] }
-criterion = { version = "0.5", optional = true }
-criterion-cmp = { version = "0.4", optional = true }
