--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -14,7 +14,7 @@ tracing = "0.1"
 once_cell = "1.19"
 tracing-subscriber = "0.3"
 tracing-bunyan-formatter = "0.3"
-opentelemetry = { version = "0.21", features=["rt-tokio"] }
+opentelemetry = "0.21"
 opentelemetry-otlp = { version = "0.14", features=["grpc-sys"] }
 tracing-opentelemetry = "0.22" 
 pprof = { version = "0.11", features = ["flamegraph"], optional = true }
