--- a/nyx-conformance/Cargo.toml
+++ b/nyx-conformance/Cargo.toml
@@ -11,6 +11,16 @@ authors = ["SeleniaProject"]
 nyx-crypto = { path = "../nyx-crypto" }
 anyhow = "1"
 serde = { version = "1", features = ["derive"] }
+nyx-core = { path = "../nyx-core" }
+nyx-control = { path = "../nyx-control" }
+nyx-stream = { path = "../nyx-stream" }
+nyx-fec = { path = "../nyx-fec" }
+nyx-transport = { path = "../nyx-transport" }
 
 [dev-dependencies]
-once_cell = "1.19" 
+once_cell = "1.19"
+tokio = { version = "1.37", features = ["full"] }
+async-trait = "0.1"
+
+[features]
+pq = [] 
