feat(stream): implement LOCALIZED_STRING frame and tests\n\nAdd parser and builder for protocol type 0x20, export through lib, and introduce conformance round-trip tests.

--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -11,5 +11,6 @@ nom = { version = "7", default-features = false, features = ["std"] }
 nyx-core = { path = "../nyx-core" }
 nyx-fec = { path = "../nyx-fec" }
 tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1", features=["derive"] }
+serde_bytes = "0.11"
 serde_cbor = "0.11"
