--- a/nyx-control/Cargo.toml
+++ b/nyx-control/Cargo.toml
@@ -7,7 +7,7 @@ description = "Nyx control plane: DHT and settings sync"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-libp2p = { version = "0.49", default-features = false, features = ["kad", "tcp-tokio", "dns-tokio"] }
+libp2p = { version = "0.49", default-features = false, features = ["kad", "dns-tokio", "tcp-tokio", "mplex", "yamux", "noise", "websocket"], optional = true }
 nyx-core = { path = "../nyx-core" }
 tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
 futures = "0.3"
@@ -15,6 +15,14 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 schemars = "0.8"
 jsonschema = "0.17"
+
+[features]
+# Full DHT functionality requires libp2p.
+dht = ["libp2p"]
+default = []
+
+[dependencies.build-protoc]
+path = "../build-protoc"
 
 [build-dependencies]
 protoc-bin-vendored = "3"
