--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -14,8 +14,9 @@ tracing = "0.1"
 once_cell = "1.19"
 tracing-subscriber = "0.3"
 tracing-bunyan-formatter = "0.3"
-opentelemetry = "0.21"
-opentelemetry-otlp = { version = "0.14", features=["grpc-sys"] }
+opentelemetry = { version = "0.21", default-features = false }
+opentelemetry_sdk = { version = "0.21", features=["rt-tokio"] }
+opentelemetry-otlp = { version = "0.14", default-features = false, features=["grpc-tonic", "trace"] }
 tracing-opentelemetry = "0.22" 
 pprof = { version = "0.11", features = ["flamegraph"], optional = true }
 chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }
