--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -26,3 +26,7 @@ flamegraph = ["pprof", "chrono"]
 
 [package.metadata.docs.rs]
 features = ["flamegraph"] 
+
+[dev-dependencies]
+hyper = { version = "0.14", features = ["client", "tcp"] }
+reqwest = { version = "0.11", default-features = false, features=["json","stream","rustls-tls"] } 
