conformance: add Multipath, PathID, ReorderBuffer, TxQueue and WeightedPathBuilder tests (8 new cases)

--- a/nyx-conformance/Cargo.toml
+++ b/nyx-conformance/Cargo.toml
@@ -16,6 +16,7 @@ nyx-control = { path = "../nyx-control" }
 nyx-stream = { path = "../nyx-stream" }
 nyx-fec = { path = "../nyx-fec" }
 nyx-transport = { path = "../nyx-transport" }
+nyx-mix = { path = "../nyx-mix" }
 
 [dev-dependencies]
 once_cell = "1.19"
