--- a/nyx-transport/Cargo.toml
+++ b/nyx-transport/Cargo.toml
@@ -14,6 +14,9 @@ tracing = "0.1"
 async-trait = "0.1"
 nyx-core = { path = "../nyx-core" }
 nyx-mix = { path = "../nyx-mix" }
+quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio", "udp"] }
+rcgen = "0.13"
+futures = "0.3"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
