--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
 serde = { version = "1", features=["derive"] }
 serde_bytes = "0.11"
 serde_cbor = "0.11"
+bitflags = "2.4"
