--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -30,3 +30,4 @@ features = ["flamegraph"]
 [dev-dependencies]
 hyper = { version = "0.14", features = ["client", "tcp"] }
 reqwest = { version = "0.11", default-features = false, features=["json","stream","rustls-tls"] } 
+prometheus = "0.13" 
