--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -17,10 +17,15 @@ blake3 = { version = "1.5", features = ["pure"] }
 sha2 = "0.10"
 hkdf = "0.12"
 rand_core = { version = "0.6", features = ["getrandom"] }
-pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
-pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
 criterion = { version = "0.5", optional = true }
 zeroize = { version = "1", features=["zeroize_derive"] }
+pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
+
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
+
+[target.'cfg(windows)'.dependencies]
+pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber", default-features = false, features = ["no_simd"] }
 
 [dev-dependencies]
 hex-literal = "0.4"
