--- a/nyx-transport/Cargo.toml
+++ b/nyx-transport/Cargo.toml
@@ -20,4 +20,5 @@ futures = "0.3"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
+[target.'cfg(unix)'.dev-dependencies]
 nix = { version = "0.27" }
