--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -15,3 +15,7 @@ serde = { version = "1", features=["derive"] }
 serde_bytes = "0.11"
 serde_cbor = "0.11"
 bitflags = "2.4"
+
+[features]
+# existing features
+mpr_experimental = []
