mix: add experimental cMix batch controller with VDF placeholder

--- a/nyx-mix/Cargo.toml
+++ b/nyx-mix/Cargo.toml
@@ -10,3 +10,4 @@ license = "MIT OR Apache-2.0"
 rand = { version = "0.8", features = ["std"] }
 rand_distr = "0.4"
 nyx-core = { path = "../nyx-core" }
+sha2 = "0.10"
