crypto: introduce pq_only feature disabling X25519, enabling pure Kyber

--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -9,6 +9,8 @@ license = "MIT OR Apache-2.0"
 [features]
 # Enable post-quantum Kyber fallback.
 pq = ["pqcrypto-kyber", "pqcrypto-traits"]
+# Build with ONLY PQ algorithm (disable X25519). Implies pq.
+pq_only = ["pq"]
 bench = ["criterion"]
 
 [dependencies]
