--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,114 +1,38 @@
-name: CI
+name: Nyx CI
 
 on:
   push:
     branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
-    name: build-${{ matrix.target }}-${{ matrix.features }}
-    runs-on: ubuntu-latest
+  build-test:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        include:
-          - target: x86_64-unknown-linux-gnu
-            features: ""
-          - target: x86_64-unknown-linux-gnu
-            features: "nyx-control/dht"
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        features: ["", "pq", "pq_only"]
+    name: cargo test (${{ matrix.os }}, features="${{ matrix.features }}")
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
         with:
-          targets: ${{ matrix.target }}
-      - name: Install protobuf (for build.rs)
-        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
-      - name: Cargo build
-        run: |
-          if [ -z "${{ matrix.features }}" ]; then
-            cargo build --workspace --target ${{ matrix.target }} --all-features
-          else
-            cargo build --workspace --target ${{ matrix.target }} --features "${{ matrix.features }}" --all-features
-          fi
-      - name: Cargo test
-        run: |
-          if [ -z "${{ matrix.features }}" ]; then
-            cargo test --workspace --target ${{ matrix.target }} --all-features -- --quiet
-          else
-            cargo test --workspace --target ${{ matrix.target }} --features "${{ matrix.features }}" --all-features -- --quiet
-          fi
-  miri:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-protoc@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-          components: miri
-      - name: setup miri
-        run: cargo miri setup
-      - name: run miri tests
-        run: cargo miri test --workspace --exclude nyx-telemetry
-
-  windows:
-    name: Windows MSVC build
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-protoc@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
           toolchain: stable
           override: true
-          target: x86_64-pc-windows-msvc
-      - name: Build
-        run: cargo build --all --verbose
-      - name: Test
-        run: cargo test --all --verbose
-
-  docker:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+      - name: Cache cargo registry
+        uses: actions/cache@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/${{ github.repository }}/nyxd:${{ github.sha }} 
-  package-chart:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Package Helm chart
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+      - name: Build & Test
         run: |
-          sudo apt-get update && sudo apt-get install -y helm
-          helm package charts/nyx --destination ./chart-dist
-      - uses: actions/upload-artifact@v3
-        with:
-          name: nyx-chart
-          path: chart-dist/*.tgz
-
-  dashboards:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Upload Grafana dashboards
-        uses: actions/upload-artifact@v3
-        with:
-          name: grafana-dashboards
-          path: grafana/dashboards/*.json 
+          if [ "${{ matrix.features }}" = "" ]; then
+            cargo test --all --all-features
+          else
+            cargo test --all --no-default-features --features "${{ matrix.features }}"
+          fi
+        shell: bash 
