--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -23,6 +23,7 @@ rand_core = { version = "0.6", features = ["getrandom"] }
 criterion = { version = "0.5", optional = true }
 zeroize = { version = "1", features=["zeroize_derive"] }
 pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
+hpke = { version = "0.10", default-features = false, features=["chacha20poly1305"] }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
