--- a/nyx-control/Cargo.toml
+++ b/nyx-control/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 schemars = "0.8"
 jsonschema = "0.17"
+rand = "0.8"
 
 [features]
 # Full DHT functionality requires libp2p.
