--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -15,6 +15,8 @@ serde = { version = "1", features=["derive"] }
 serde_bytes = "0.11"
 serde_cbor = "0.11"
 bitflags = "2.4"
+schemars = { version = "0.8", features=["derive"] }
+jsonschema = "0.17"
 
 [features]
 # existing features
