--- a/nyx-fec/Cargo.toml
+++ b/nyx-fec/Cargo.toml
@@ -15,6 +15,7 @@ nyx-core = { path = "../nyx-core" }
 tokio = { version = "1.37", features = ["time", "sync", "rt"] }
 rand = "0.8"
 rand_distr = "0.4"
+raptorq = "0.3"
 
 [features]
 # Enable C/assembly SIMD acceleration in reed-solomon-erasure when available.
