--- a/nyx-core/Cargo.toml
+++ b/nyx-core/Cargo.toml
@@ -16,6 +16,7 @@ notify = { version = "6.1" }
 fluent-bundle = { version = "0.15" }
 unic-langid = "0.9"
 once_cell = "1.19"
+serde_cbor = "0.11"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 seccomp = "0.1"
