--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -17,6 +17,7 @@ serde_cbor = "0.11"
 bitflags = "2.4"
 schemars = { version = "0.8", features=["derive"] }
 jsonschema = "0.17"
+tracing = "0.1"
 
 [features]
 # existing features
