--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -24,6 +24,8 @@ criterion = { version = "0.5", optional = true }
 zeroize = { version = "1", features=["zeroize_derive"] }
 pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
 hpke = { version = "0.10", default-features = false, features=["chacha20poly1305"] }
+chacha20poly1305 = { version = "0.10", default-features = false, features=["alloc"] }
+thiserror = "1"
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
