--- a/nyx-mix/Cargo.toml
+++ b/nyx-mix/Cargo.toml
@@ -14,3 +14,4 @@ sha2 = "0.10"
 num-bigint = "0.4"
 num-traits = "0.2"
 tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
+lazy_static = "1"
