--- a/nyx-fec/Cargo.toml
+++ b/nyx-fec/Cargo.toml
@@ -16,6 +16,10 @@ tokio = { version = "1.37", features = ["time", "sync", "rt"] }
 rand = "0.8"
 rand_distr = "0.4"
 raptorq = "0.3"
+rayon = { version = "1.10", optional = true }
+
+[target.'cfg(windows)'.dependencies]
+rayon = { version = "1.10" }
 
 [features]
 # Enable C/assembly SIMD acceleration in reed-solomon-erasure when available.
