--- a/nyx-conformance/Cargo.toml
+++ b/nyx-conformance/Cargo.toml
@@ -22,6 +22,7 @@ nyx-mix = { path = "../nyx-mix" }
 once_cell = "1.19"
 tokio = { version = "1.37", features = ["full"] }
 async-trait = "0.1"
+num-bigint = "0.4"
 
 [features]
 pq = [] 
