--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -7,6 +7,8 @@ description = "Nyx cryptography engine implementing Noise_Nyx handshake and HKDF
 license = "MIT OR Apache-2.0"
 
 [features]
+# default enable pq
+default = ["pq"]
 # Enable post-quantum Kyber fallback.
 pq = ["pqcrypto-kyber", "pqcrypto-traits"]
 # Build with ONLY PQ algorithm (disable X25519). Implies pq.
@@ -15,23 +17,20 @@ bench = ["criterion"]
 hybrid = ["pq"]
 
 [dependencies]
-x25519-dalek = { version = "2.0", features=["u64_backend"] }
+x25519-dalek = { version = "2.0.1", features=["static_secrets"] }
 blake3 = { version = "1.5", features = ["pure"] }
 sha2 = "0.10"
+chacha20poly1305 = { version = "0.10", default-features = false, features=["alloc"] }
 hkdf = "0.12"
 rand_core = { version = "0.6", features = ["getrandom"] }
 criterion = { version = "0.5", optional = true }
-zeroize = { version = "1", features=["zeroize_derive"] }
+zeroize = { version = "1.7", features=["zeroize_derive"] }
 pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
-hpke = "0.10"
-chacha20poly1305 = { version = "0.10", default-features = false, features=["alloc"] }
+# HPKE support temporarily disabled pending dependency resolution
+# hpke = { version = "0.10", default-features = false, features = ["p256"] }
 thiserror = "1"
 
-[target.'cfg(not(target_os = "windows"))'.dependencies]
-pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
-
-[target.'cfg(windows)'.dependencies]
-pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber", default-features = false, features = ["no_simd"] }
+pqcrypto-kyber = { version = "0.7", package = "pqcrypto-kyber", optional = true }
 
 [dev-dependencies]
 hex-literal = "0.4"
