feat(telemetry): track extended error codes and CLI reporting
 nyx-telemetry: add nyx_error_total counter (label code) and record_error() API
 nyx-core: expose NyxError::code() and record() with optional telemetry feature
 new optional feature 	elemetry in nyx-core linking to nyx-telemetry
 cli: add new crate nyx-cli with subcommand errors to fetch and display metrics
 workspace: add nyx-cli; task.md updated to mark path validation item done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "nyx-stream",
     "nyx-telemetry", # Prometheus exporter crate
     "nyx-control",
+    "nyx-cli",
     "nyx-sdk-wasm",
     "nyx-conformance",
     "build-protoc",
