--- a/charts/nyx/values.yaml
+++ b/charts/nyx/values.yaml
@@ -9,4 +9,27 @@ service:
   type: ClusterIP
   port: 43300
 
-resources: {} 
+# Prometheus exporter port used for readiness probe
+exporter:
+  port: 9090
+
+# PodDisruptionBudget configuration
+pdb:
+  enabled: true
+  minAvailable: 1
+
+# HorizontalPodAutoscaler configuration
+hpa:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 75
+
+# Default resource requests/limits (can be overridden)
+resources:
+  limits:
+    cpu: 500m
+    memory: 512Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi 
