--- a/nyx-sdk-wasm/Cargo.toml
+++ b/nyx-sdk-wasm/Cargo.toml
@@ -12,4 +12,21 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2"
 nyx-crypto = { path = "../nyx-crypto" }
 getrandom = { version = "0.2", features = ["js"] }
-hex = "0.4" 
+hex = "0.4"
+wasm-bindgen-futures = "0.4"
+js-sys = "0.3"
+base64 = "0.22"
+web-sys = { version = "0.3", features = [
+    "Window",
+    "Navigator",
+    "ServiceWorkerContainer",
+    "ServiceWorkerRegistration",
+    "PushManager",
+    "PushSubscription",
+    "PushSubscriptionOptionsInit",
+    "Request",
+    "Response",
+    "Headers",
+    "Notification",
+    "console"
+] } 
