--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -17,19 +17,17 @@ bench = ["criterion"]
 hybrid = ["pq"]
 
 [dependencies]
-x25519-dalek = { version = "2.0.1", features=["static_secrets"] }
+x25519-dalek = { version = "3.0.0-pre.0", features=["static_secrets"] }
 blake3 = { version = "1.5", features = ["pure"] }
 sha2 = "0.10"
 chacha20poly1305 = { version = "0.10", default-features = false, features=["alloc"] }
 hkdf = "0.12"
-rand_core = { version = "0.6", features = ["getrandom"] }
+rand_core = { version = "0.9", features = ["std", "os_rng"] }
 criterion = { version = "0.5", optional = true }
 zeroize = { version = "1.7", features=["zeroize_derive"] }
 pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
-# HPKE support temporarily disabled pending dependency resolution
-# hpke = { version = "0.10", default-features = false, features = ["p256"] }
+hpke = { version = "0.13", default-features = false, features=["x25519"] }
 thiserror = "1"
-
 pqcrypto-kyber = { version = "0.7", package = "pqcrypto-kyber", optional = true }
 
 [dev-dependencies]
