--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -7,28 +7,47 @@ description = "Nyx cryptography engine implementing Noise_Nyx handshake and HKDF
 license = "MIT OR Apache-2.0"
 
 [features]
-# default enable pq
-default = ["pq"]
-# Enable post-quantum Kyber fallback.
-pq = ["pqcrypto-kyber", "pqcrypto-traits"]
-# Build with ONLY PQ algorithm (disable X25519). Implies pq.
-pq_only = ["pq"]
+default = ["classic"]
+
+# Classic (Elliptic Curve) X25519 only build
+classic = ["x25519-dalek"]
+
+# Kyber-only post-quantum build
+kyber = ["pqcrypto-kyber", "pqcrypto-traits"]
+
+# BIKE post-quantum build (experimental; may fail until crate published)
+bike = ["pqcrypto-traits"]
+
+# Convenience flag: build solely with PQ algorithms (Kyber by default)
+pq_only = ["kyber"]
+
+# Enable criterion benchmarks
 bench = ["criterion"]
-hybrid = ["pq"]
 
 [dependencies]
-x25519-dalek = { version = "3.0.0-pre.0", features=["static_secrets"] }
+# Core crypto deps
+# Classic X25519 (enabled by feature "classic")
+# X25519 implementation (classic mode)
+x25519-dalek = { version = "2.0.1", default-features = false, optional = true }
+
+# Post-quantum KEMs (enabled by feature flags below)
+pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
+pqcrypto-traits = { version = "0.3", optional = true }
+
+# Symmetric primitives
 blake3 = { version = "1.5", features = ["pure"] }
 sha2 = "0.10"
-chacha20poly1305 = { version = "0.10", default-features = false, features=["alloc"] }
+chacha20poly1305 = { version = "0.9", default-features = false, features=["alloc"] }
 hkdf = "0.12"
-rand_core = { version = "0.9", features = ["std", "os_rng"] }
+rand_core = { version = "0.9" }
+rand_core_06 = { package = "rand_core", version = "0.6", features=["std","getrandom"] }
+
+# Dev / bench
 criterion = { version = "0.5", optional = true }
-zeroize = { version = "1.7", features=["zeroize_derive"] }
-pqcrypto-traits = { version = "0.3", optional = true, package = "pqcrypto-traits" }
-hpke = { version = "0.13", default-features = false, features=["x25519"] }
-thiserror = "1"
-pqcrypto-kyber = { version = "0.7", package = "pqcrypto-kyber", optional = true }
+
+# Modern zeroize version shared with rustls
+zeroize = { version = "1.8", features=["zeroize_derive"] }
+thiserror = "1.0"
 
 [dev-dependencies]
 hex-literal = "0.4"
