--- a/nyx-mix/Cargo.toml
+++ b/nyx-mix/Cargo.toml
@@ -11,7 +11,15 @@ rand = { version = "0.8", features = ["std"] }
 rand_distr = "0.4"
 nyx-core = { path = "../nyx-core" }
 sha2 = "0.10"
-num-bigint = "0.4"
+serde = { version = "1", features=["derive"] }
+serde_bytes = "0.11"
+serde_cbor = "0.11"
+bitflags = "2.4"
+schemars = { version = "0.8", features=["derive"] }
+jsonschema = "0.17"
+tracing = "0.1"
+num-bigint = { version = "0.4", features=["rand"] }
+num-integer = "0.1"
 num-traits = "0.2"
 tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
 lazy_static = "1"
