--- a/nyx-control/Cargo.toml
+++ b/nyx-control/Cargo.toml
@@ -16,6 +16,9 @@ serde_json = "1"
 schemars = "0.8"
 jsonschema = "0.17"
 rand = "0.8"
+nyx-stream = { path = "../nyx-stream" }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+tracing = "0.1"
 
 [features]
 # Full DHT functionality requires libp2p.
