--- a/nyx-fec/Cargo.toml
+++ b/nyx-fec/Cargo.toml
@@ -15,7 +15,7 @@ nyx-core = { path = "../nyx-core" }
 tokio = { version = "1.37", features = ["time", "sync", "rt"] }
 rand = "0.8"
 rand_distr = "0.4"
-raptorq = "2"
+raptorq = "=1.6.0"
 rayon = { version = "1.10", optional = true }
 
 [target.'cfg(windows)'.dependencies]
