--- a/nyx-transport/Cargo.toml
+++ b/nyx-transport/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
 rand = "0.8"
 socket2 = "0.5"
 tracing = "0.1"
+once_cell = "1.19"
 async-trait = "0.1"
 nyx-core = { path = "../nyx-core" }
 nyx-mix = { path = "../nyx-mix" }
