--- a/nyx-mix/Cargo.toml
+++ b/nyx-mix/Cargo.toml
@@ -23,3 +23,4 @@ num-integer = "0.1"
 num-traits = "0.2"
 tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
 lazy_static = "1"
+num-modular = { version = "0.6", default-features = false, features=["num-bigint"] }
