--- a/nyx-core/Cargo.toml
+++ b/nyx-core/Cargo.toml
@@ -17,6 +17,7 @@ fluent-bundle = { version = "0.15" }
 unic-langid = "0.9"
 once_cell = "1.19"
 serde_cbor = "0.11"
+tokio-stream = { version = "0.1", features=["sync"] }
 
 # Optional telemetry integration
 nyx-telemetry = { path = "../nyx-telemetry", optional = true }
