fec: enable SIMD-accelerated Reed-Solomon and complete FEC layer tasks

--- a/nyx-fec/Cargo.toml
+++ b/nyx-fec/Cargo.toml
@@ -22,7 +22,8 @@ rayon = { version = "1.10", optional = true }
 rayon = { version = "1.10" }
 
 [features]
-# Enable C/assembly SIMD acceleration in reed-solomon-erasure when available.
+default = []
+# Enable SIMD-accelerated C backend of reed-solomon-erasure (requires cc).
 simd = ["reed-solomon-erasure/simd-accel"]
 raptorq = []
 
