--- a/nyx-core/Cargo.toml
+++ b/nyx-core/Cargo.toml
@@ -11,7 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.7"
 thiserror = "1.0"
 tracing = "0.1"
-tokio = { version = "1.37", features = ["full"] }
+tokio = { version = "1", features = ["sync","time", "macros"] }
 notify = { version = "6.1" }
 fluent-bundle = { version = "0.15" }
 unic-langid = "0.9"
