feat(stream/plugin): implement plugin lifecycle API with load/unload and semantic version check
- Extend PluginInfo with semver version field and enforce major compatibility
- Add PluginRegistry::unregister, persistence updated to store version
- Introduce PluginDispatcher::load_plugin/unload_plugin and optional dynamic linkage support
- Update geostat sample plugin and unit tests
- Add semver (with serde) and optional libloading dependencies
- Mark task complete in task.md

--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -19,8 +19,11 @@ schemars = { version = "0.8", features=["derive"] }
 jsonschema = "0.17"
 tracing = "0.1"
 nyx-crypto = { path = "../nyx-crypto" }
+semver = { version = "1.0", features = ["serde"] }
+libloading = { version = "0.8", optional = true }
 
 [features]
 default = []
 plugin = []
 mpr_experimental = []
+dynamic_plugin = ["libloading"]
