feat(chart): add HPA with nyx_bytes_sent_total metric and seccomp hardening
- Update hpa.yaml to include custom Pods metric based on nyx_bytes_sent_total
- Extend values.yaml with targetBytesPerSecond and podSecurity.seccompProfile
- Enhance deployment.yaml with pod-level seccompProfile referencing localhost profile
- Add default seccomp profile json (nyx-seccomp-bpf.json)
- Mark deployment tasks complete in task.md

--- a/charts/nyx/values.yaml
+++ b/charts/nyx/values.yaml
@@ -24,6 +24,12 @@ hpa:
   minReplicas: 2
   maxReplicas: 5
   targetCPUUtilizationPercentage: 75
+  targetBytesPerSecond: "5Mi"
+
+# Pod security context (seccomp)
+podSecurity:
+  # Localhost seccomp profile name mounted via projected volume or node default path
+  seccompProfile: "nyx-seccomp-bpf.json"
 
 # Default resource requests/limits (can be overridden)
 resources:
