--- a/charts/nyx/templates/deployment.yaml
+++ b/charts/nyx/templates/deployment.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: {{ include "nyx.name" . }}
     spec:
+      securityContext:
+        seccompProfile:
+          type: Localhost
+          localhostProfile: {{ .Values.podSecurity.seccompProfile | quote }}
       containers:
         - name: nyxd
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
