--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -11,3 +11,11 @@ clap = { version = "4", features = ["derive"] }
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
 regex = "1.10"
 anyhow = "1" 
+rand = "0.8"
+zeroize = "1.7"
+nyx-crypto = { path = "../nyx-crypto" }
+rpassword = "7.2"
+dirs = "5"
+fluent-bundle = { version = "0.16", features = ["unic-langid", "some_concurrent"] }
+unic-langid = "0.9" 
+once_cell = "1.19" 
