test(ci): add property tests, fuzz targets, wasm build matrix
- proptest-based tests for WeightedRrScheduler and RaptorQ recovery
- New cargo-fuzz targets: plugin_parser and vdf_proof
- Extend conformance crate dev-deps with proptest and rand
- CI workflow updated with wasm32 build job
- task.md Testing & CI section completed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,18 @@ jobs:
             cargo test --all --no-default-features --features "${{ matrix.features }}"
           fi
         shell: bash 
+
+  wasm-build:
+    runs-on: ubuntu-latest
+    name: wasm32 build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust (wasm target)
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          targets: wasm32-unknown-unknown
+          override: true
+      - name: Build nyx-sdk-wasm
+        run: |
+          cargo build -p nyx-sdk-wasm --target wasm32-unknown-unknown --release 
