--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -16,6 +16,6 @@ zeroize = "1.7"
 nyx-crypto = { path = "../nyx-crypto" }
 rpassword = "7.2"
 dirs = "5"
-fluent-bundle = { version = "0.16", features = ["unic-langid", "some_concurrent"] }
+fluent-bundle = { version = "0.16" }
 unic-langid = "0.9" 
 once_cell = "1.19" 
