--- a/nyx-core/Cargo.toml
+++ b/nyx-core/Cargo.toml
@@ -18,6 +18,9 @@ unic-langid = "0.9"
 once_cell = "1.19"
 serde_cbor = "0.11"
 tokio-stream = { version = "0.1", features=["sync"] }
+async-trait = "0.1"
+anyhow = "1"
+libc = "0.2"
 
 # Optional telemetry integration
 nyx-telemetry = { path = "../nyx-telemetry", optional = true }
