--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -52,7 +52,12 @@ criterion = { version = "0.5", optional = true }
 zeroize = { version = "1.8", features=["zeroize_derive"] }
 thiserror = "1.0"
 
-age = { version = "0.11", default-features = false, features=["armor"] }
+age = { version = "0.11", default-features = false, features=["armor", "secrecy"] }
+
+# metadata serialization for future extensions
+serde = { version = "1", features=["derive"], optional = true }
+serde_json = { version = "1", optional = true }
 
 [dev-dependencies]
 hex-literal = "0.4"
+filetime = { version = "0.2", optional = false }
