--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,3 @@
-[package]
-name = "nyx-workspace"
-version = "0.0.0"
-edition = "2021"
-publish = false
-build = "build.rs"
-
 [workspace]
 members = [
     "nyx-core",
@@ -16,14 +9,12 @@ members = [
     "nyx-telemetry", # Prometheus exporter crate
     "nyx-control",
     "nyx-cli",
+    "nyx-daemon",
     "nyx-sdk-wasm",
     "nyx-conformance",
     "build-protoc",
 ]
 resolver = "2"
-
-[build-dependencies]
-protoc-bin-vendored = "3"
 
 [profile.release]
 codegen-units = 1
