--- a/nyx-control/Cargo.toml
+++ b/nyx-control/Cargo.toml
@@ -19,7 +19,7 @@ rand = "0.8"
 nyx-stream = { path = "../nyx-stream" }
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 tracing = "0.1"
-jsonwebtoken = { version = "9", default-features = false, features = ["serde"] }
+jsonwebtoken = "9"
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 
 [features]
