--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -52,7 +52,7 @@ criterion = { version = "0.5", optional = true }
 zeroize = { version = "1.8", features=["zeroize_derive"] }
 thiserror = "1.0"
 
-age = { version = "0.11", default-features = false, features=["armor", "secrecy"] }
+age = { version = "0.11", default-features = false, features=["armor"] }
 
 # metadata serialization for future extensions
 serde = { version = "1", features=["derive"], optional = true }
