--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 
 [features]
 default = ["classic"]
-
+hpke = ["dep:hpke"]
 # Classic (Elliptic Curve) X25519 only build
 classic = ["x25519-dalek"]
 
@@ -44,6 +44,9 @@ chacha20poly1305 = { version = "0.9", default-features = false, features=["alloc
 hkdf = "0.12"
 rand_core = { version = "0.9" }
 rand_core_06 = { package = "rand_core", version = "0.6", features=["std","getrandom"] }
+
+# HPKE RFC9180 implementation (optional)
+hpke = { version = "0.11", optional = true }
 
 # Dev / bench
 criterion = { version = "0.5", optional = true }
