--- a/nyx-control/Cargo.toml
+++ b/nyx-control/Cargo.toml
@@ -15,10 +15,12 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 schemars = "0.8"
 jsonschema = "0.17"
+hex = "0.4"
 rand = "0.8"
 nyx-stream = { path = "../nyx-stream" }
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 tracing = "0.1"
+anyhow = "1"
 jsonwebtoken = "9"
 chrono = { version = "0.4", features = ["std"] }
 
