--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -18,6 +18,7 @@ bitflags = "2.4"
 schemars = { version = "0.8", features=["derive"] }
 jsonschema = "0.17"
 tracing = "0.1"
+bytes = "1"
 once_cell = "1.19"
 nyx-crypto = { path = "../nyx-crypto" }
 nyx-telemetry = { path = "../nyx-telemetry" }
