feat: implement comprehensive mobile platform integration and telemetry
- Add mobile state monitoring with power profile adaptation
- Implement adaptive cover traffic with real-time lambda scaling
- Add comprehensive push notification gateway with FCM/APNS support
- Implement E2E wake-up sequences for dormant connections
- Add OpenTelemetry OTLP exporter with metrics, traces, and logs
- Enhance cross-platform plugin sandboxing (macOS system extension, Windows Job Object)
- Add dynamic plugin CI/CD workflow with comprehensive testing
- Integrate mobile power states with cover traffic generation
- Add performance monitoring and alerting capabilities

This completes mobile low power mode integration and telemetry infrastructure.

--- a/nyx-mix/Cargo.toml
+++ b/nyx-mix/Cargo.toml
@@ -11,6 +11,7 @@ rand = { version = "0.8", features = ["std"] }
 rand_distr = "0.4"
 nyx-core = { path = "../nyx-core" }
 sha2 = "0.10"
+rayon = "1.9"
 serde = { version = "1", features=["derive"] }
 serde_bytes = "0.11"
 serde_cbor = "0.11"
@@ -23,3 +24,4 @@ num-integer = "0.1"
 num-traits = "0.2"
 tokio = { version = "1.37", features = ["sync", "time", "rt", "macros"] }
 lazy_static = "1"
+tokio-stream = { version = "0.1", features=["sync"] }
