--- a/nyx-core/Cargo.toml
+++ b/nyx-core/Cargo.toml
@@ -21,14 +21,31 @@ tokio-stream = { version = "0.1", features=["sync"] }
 async-trait = "0.1"
 anyhow = "1"
 libc = "0.2"
+uuid = { version = "1.6", features = ["v4", "serde"] }
+rand = { version = "0.8", features = ["std"] }
 
 # Optional telemetry integration
 nyx-telemetry = { path = "../nyx-telemetry", optional = true }
+
+# Optional crypto integration
+nyx-crypto = { path = "../nyx-crypto", optional = true }
+
+# Optional push notification dependencies
+fcm = { version = "0.10", optional = true }
+a2 = { version = "0.10", optional = true }
 
 [features]
 default = []
 # Enable automatic error metric recording.
 telemetry = ["nyx-telemetry"]
+# Enable mobile platform integration
+mobile = ["nyx-crypto"]
+# Enable push notification support
+push = ["fcm", "a2", "uuid"]
+# Enable FCM support
+fcm = ["dep:fcm"]
+# Enable APNS support  
+apns = ["dep:a2"]
 
 [target.'cfg(target_os = "linux")'.dependencies]
 seccomp = "0.1"
@@ -36,6 +53,7 @@ anyhow = "1"
 
 [dev-dependencies]
 hex-literal = "0.4"
+tempfile = "3.8"
 
 [build-dependencies]
 protoc-bin-vendored = "3"
