--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -3,7 +3,7 @@ name = "nyx-telemetry"
 version = "0.1.0"
 edition = "2021"
 
-description = "Prometheus metrics exporter for Nyx."
+description = "Comprehensive telemetry with OpenTelemetry OTLP and Prometheus support for Nyx."
 license = "MIT OR Apache-2.0"
 
 [dependencies]
@@ -14,20 +14,28 @@ tracing = "0.1"
 once_cell = "1.19"
 tracing-subscriber = "0.3"
 tracing-bunyan-formatter = "0.3"
-opentelemetry = { version = "0.21", default-features = false }
-opentelemetry_sdk = { version = "0.21", features=["rt-tokio"] }
-opentelemetry-otlp = { version = "0.14", default-features = false, features=["grpc-tonic", "trace"] }
+opentelemetry = { version = "0.21", default-features = false, features = ["metrics", "trace"] }
+opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics", "trace"] }
+opentelemetry-otlp = { version = "0.14", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
+opentelemetry-prometheus = { version = "0.14" }
+opentelemetry-semantic-conventions = "0.13"
 tracing-opentelemetry = "0.22" 
 pprof = { version = "0.11", features = ["flamegraph"], optional = true }
 chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }
+serde = { version = "1.0", features = ["derive"] }
+warp = { version = "0.3", optional = true }
+tonic = { version = "0.10", optional = true }
 
 [features]
+default = ["otlp", "prometheus"]
 flamegraph = ["pprof", "chrono"] 
+otlp = ["opentelemetry-otlp", "tonic"]
+prometheus = ["opentelemetry-prometheus", "warp"]
 
 [package.metadata.docs.rs]
-features = ["flamegraph"] 
+features = ["flamegraph", "otlp", "prometheus"] 
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["client", "tcp"] }
 reqwest = { version = "0.11", default-features = false, features=["json","stream","rustls-tls"] } 
-prometheus = "0.13" 
+tempfile = "3.8" 
