--- a/nyx-daemon/Cargo.toml
+++ b/nyx-daemon/Cargo.toml
@@ -15,12 +15,63 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 tonic = { version = "0.10", features = ["transport"] }
 tokio-stream = { version = "0.1", features = ["net"] }
 
+# Core Nyx components
 nyx-core = { path = "../nyx-core" }
 nyx-transport = { path = "../nyx-transport" }
 nyx-stream = { path = "../nyx-stream" }
 nyx-mix = { path = "../nyx-mix" }
 nyx-control = { path = "../nyx-control" }
 nyx-telemetry = { path = "../nyx-telemetry" }
+nyx-crypto = { path = "../nyx-crypto" }
+nyx-fec = { path = "../nyx-fec" }
+
+# Additional dependencies for comprehensive implementation
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+dashmap = "5.5"
+arc-swap = "1.6"
+parking_lot = "0.12"
+crossbeam-channel = "0.5"
+futures = "0.3"
+futures-util = "0.3"
+pin-project = "1.1"
+bytes = "1.5"
+thiserror = "1.0"
+anyhow = "1.0"
+
+# System monitoring
+sysinfo = "0.30"
+
+# Configuration and serialization
+toml = "0.8"
+config = "0.14"
+
+# Networking and async utilities
+socket2 = "0.5"
+hickory-resolver = "0.24"
+
+# Metrics and telemetry
+metrics = "0.22"
+metrics-exporter-prometheus = "0.13"
+opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
+opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
+opentelemetry-semantic-conventions = "0.13"
+
+# Crypto and security
+rand = "0.8"
+blake3 = "1.5"
+hex = "0.4"
+
+# Data structures and algorithms
+indexmap = "2.1"
+lru = "0.12"
+priority-queue = "1.3"
+
+# Path and routing
+petgraph = "0.6"
+geo = "0.27"
 
 [build-dependencies]
 tonic-build = "0.10" 
