--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -16,8 +16,8 @@ tracing-subscriber = "0.3"
 tracing-bunyan-formatter = "0.3"
 opentelemetry = { version = "0.21", default-features = false, features = ["metrics", "trace"] }
 opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics", "trace"] }
-opentelemetry-otlp = { version = "0.14", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
-opentelemetry-prometheus = { version = "0.14" }
+opentelemetry-otlp = { version = "0.14", default-features = false, features = ["grpc-tonic", "trace", "metrics"], optional = true }
+opentelemetry-prometheus = { version = "0.14", optional = true }
 opentelemetry-semantic-conventions = "0.13"
 tracing-opentelemetry = "0.22" 
 pprof = { version = "0.11", features = ["flamegraph"], optional = true }
@@ -25,12 +25,13 @@ chrono = { version = "0.4", default-features = false, features = ["std"], option
 serde = { version = "1.0", features = ["derive"] }
 warp = { version = "0.3", optional = true }
 tonic = { version = "0.10", optional = true }
+anyhow = "1.0"
 
 [features]
 default = ["otlp", "prometheus"]
 flamegraph = ["pprof", "chrono"] 
-otlp = ["opentelemetry-otlp", "tonic"]
-prometheus = ["opentelemetry-prometheus", "warp"]
+otlp = ["dep:opentelemetry-otlp", "dep:tonic"]
+prometheus = ["dep:opentelemetry-prometheus", "dep:warp"]
 
 [package.metadata.docs.rs]
 features = ["flamegraph", "otlp", "prometheus"] 
