--- a/nyx-mix/Cargo.toml
+++ b/nyx-mix/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 description = "Nyx mix routing layer (path selection & cover traffic)"
 license = "MIT OR Apache-2.0"
 
+[features]
+default = []
+mobile = []
+
 [dependencies]
 rand = { version = "0.8", features = ["std"] }
 rand_distr = "0.4"
