--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -18,18 +18,10 @@ comfy-table = "7.1"
 console = "0.15"
 indicatif = "0.17"
 byte-unit = "5.1"
-colored = "2.2"
-i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
-fluent-bundle = "0.16"
-rust-embed = "8.7"
-nyx-crypto = { path = "../nyx-crypto" }
-serde_yaml = "0.9"
-fluent = "0.17"
-serde_json = "1.0"
-unic-langid = "0.9"
 ctrlc = "3.4"
-humantime = "2.1"
 serde = { version = "1.0", features = ["derive"] }
+anyhow = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 
 [build-dependencies]
 tonic-build = "0.10" 
