feat: Complete gRPC protocol extensions for daemon integration
- Enhanced NodeInfo with PID, active_streams, connected_peers, and mix_routes
- Implemented comprehensive performance metrics collection
  - Real-time cover_traffic_rate, avg_latency, packet_loss_rate, bandwidth_utilization
  - System resource monitoring with CPU and memory usage tracking
  - Connection success rate and detailed statistics
- Added detailed stream statistics with per-stream metrics
- Implemented real-time statistics streaming with enhanced custom metrics
- Upgraded metrics collector with advanced performance tracking
- Added system monitoring using sysinfo crate for accurate resource usage
- Enhanced stream manager with comprehensive path statistics
- Improved error handling and resource management

All gRPC protocol extensions from task 1.2 are now fully implemented:
1.2.1  NodeInfo extensions - PID, active_streams, connected_peers, mix_routes
1.2.2  Performance information - cover_traffic_rate, avg_latency, packet_loss_rate, bandwidth_utilization
1.2.3  Stream detailed information - per-stream statistics
1.2.4  Real-time statistics - dynamic statistics via gRPC streaming

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "nyx-control",
     "nyx-cli",
     "nyx-daemon",
+    "nyx-sdk",
     "nyx-sdk-wasm",
     "nyx-conformance",
     "build-protoc",
