--- a/nyx-cli/Cargo.toml
+++ b/nyx-cli/Cargo.toml
@@ -20,6 +20,7 @@ indicatif = "0.17"
 byte-unit = "5.1"
 ctrlc = "3.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 
