--- a/nyx-crypto/Cargo.toml
+++ b/nyx-crypto/Cargo.toml
@@ -12,13 +12,13 @@ hpke = ["dep:hpke"]
 # Classic (Elliptic Curve) X25519 only build
 classic = ["x25519-dalek"]
 
-# Kyber-only post-quantum build
-kyber = ["pqcrypto-kyber", "pqcrypto-traits"]
+# Kyber post-quantum build (pure Rust implementation)
+kyber = ["pqc_kyber"]
 
-# BIKE post-quantum build (experimental; may fail until crate published)
-bike = ["pqcrypto-traits"]
+# ML-KEM post-quantum build (NIST standardized) - REMOVED due to C dependencies
+# ml-kem = ["dep:ml-kem"]
 
-# Convenience flag: build solely with PQ algorithms (Kyber by default)
+# Convenience flag: build with hybrid classic/PQ algorithms
 hybrid = ["classic", "kyber"]
 
 # Convenience flag: build solely with PQ algorithms (Kyber by default)
@@ -33,16 +33,16 @@ bench = ["criterion"]
 # X25519 implementation (classic mode)
 x25519-dalek = { version = "2.0.1", default-features = false, optional = true }
 
-# Post-quantum KEMs (enabled by feature flags below)
-pqcrypto-kyber = { version = "0.7", optional = true, package = "pqcrypto-kyber" }
-pqcrypto-traits = { version = "0.3", optional = true }
+# Pure Rust post-quantum implementations
+pqc_kyber = { version = "0.7", optional = true }
+# ml-kem = { version = "0.2", optional = true } # REMOVED due to C dependencies
 
 # Symmetric primitives
 blake3 = { version = "1.5", features = ["pure"] }
 sha2 = "0.10"
 chacha20poly1305 = { version = "0.9", default-features = false, features=["alloc"] }
 hkdf = "0.12"
-rand_core = { version = "0.9", features = ["os_rng"] }
+rand_core = { version = "0.9", features = ["std"] }
 rand_core_06 = { package = "rand_core", version = "0.6", features=["std","getrandom"] }
 
 # HPKE RFC9180 implementation (optional)
@@ -54,7 +54,11 @@ criterion = { version = "0.5", optional = true }
 # Modern zeroize version shared with rustls
 zeroize = { version = "1.8", features=["zeroize_derive"] }
 thiserror = "1.0"
-age = { version = "0.11", default-features = false, features=["armor"] }
+# Using pure Rust ChaCha20Poly1305 instead of age to avoid ring dependency
+aes-gcm = { version = "0.10", features = ["aes"] }
+pbkdf2 = { version = "0.12", features = ["simple"] }
+hmac = "0.12"
+getrandom = "0.2"
 
 # System dependencies
 rpassword = "7.3"
