--- a/nyx-daemon/Cargo.toml
+++ b/nyx-daemon/Cargo.toml
@@ -12,7 +12,7 @@ prost-types = "0.12"
 tokio = { version = "1.37", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
-tonic = { version = "0.10", features = ["transport"] }
+tonic = { version = "0.10", default-features = false, features = ["transport", "prost", "codegen"] }
 tokio-stream = { version = "0.1", features = ["net"] }
 clap = { version = "4.0", features = ["derive"] }
 
@@ -49,9 +49,19 @@ sysinfo = "0.30"
 toml = "0.8"
 config = "0.14"
 
+# DHT and P2P networking (Disabled to avoid C++ dependencies)
+# libp2p = { version = "0.53", features = ["kad", "mdns", "yamux", "tcp", "dns", "tokio", "macros"] }
+# libp2p-identity = "0.2"
+# libp2p-kad = "0.45"
+# libp2p-swarm = "0.44"
+
+# Pure Rust cryptography to replace libp2p-noise
+chacha20poly1305 = { version = "0.10", features = ["alloc"] }
+x25519-dalek = { version = "2.0", features = ["static_secrets"] }
+multiaddr = "0.18"
+
 # Networking and async utilities
 socket2 = "0.5"
-hickory-resolver = "0.24"
 
 # Logging
 log = "0.4"
@@ -64,12 +74,20 @@ opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
 opentelemetry-semantic-conventions = "0.13"
 
 # HTTP server for Prometheus metrics
-axum = "0.7"
+axum = { version = "0.7", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "tokio"] }
 
 # Crypto and security
 rand = "0.8"
 blake3 = "1.5"
 hex = "0.4"
+
+# Pure Rust TLS for tonic (avoiding ring dependency) - DISABLED to avoid C++ deps
+# rustls = { version = "0.21", default-features = false, features = ["logging", "std", "tls12"] }
+# rustls-pemfile = "1.0"
+# tonic-rustls = "0.2"
+
+# Pure Rust crypto backend for rustls (no ring/aws-lc-rs) - DISABLED
+# webpki-roots = "0.25"
 
 # Data structures and algorithms
 indexmap = "2.1"
@@ -80,12 +98,11 @@ priority-queue = "1.3"
 petgraph = "0.6"
 geo = "0.27"
 
-# DHT and peer discovery
-libp2p = { version = "0.53", features = ["kad", "noise", "yamux", "tcp", "tokio", "macros"] }
-trust-dns-resolver = "0.23"
+# DNS resolver (Pure Rust)
+hickory-resolver = "0.24"
 
-# Database for peer persistence
-rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
+# Database for peer persistence (Pure Rust alternative)
+redb = { version = "2.1", features = ["logging"] }
 
 [build-dependencies]
 tonic-build = "0.10" 
