--- a/nyx-stream/Cargo.toml
+++ b/nyx-stream/Cargo.toml
@@ -39,6 +39,16 @@ win32job = "2.0"
 
 [dev-dependencies]
 tempfile = "3.8"
+criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
+tokio-test = "0.4"
+
+[[bench]]
+name = "performance_test"
+harness = false
+
+[[bench]]
+name = "simple_performance_test"
+harness = false
 
 [features]
 default = []
