--- a/nyx-telemetry/Cargo.toml
+++ b/nyx-telemetry/Cargo.toml
@@ -38,5 +38,5 @@ features = ["flamegraph", "otlp", "prometheus"]
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["client", "tcp"] }
-reqwest = { version = "0.11", default-features = false, features=["json","stream","rustls-tls"] } 
+reqwest = { version = "0.11", default-features = false, features=["json","stream"] } 
 tempfile = "3.8" 
