--- a/nyx-transport/Cargo.toml
+++ b/nyx-transport/Cargo.toml
@@ -20,7 +20,7 @@ async-trait = "0.1"
 nyx-core = { path = "../nyx-core" }
 nyx-mix = { path = "../nyx-mix" }
 nyx-stream = { path = "../nyx-stream" }
-quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"], optional = true }
+quinn = { version = "0.11", default-features = false, features = ["runtime-tokio"], optional = true }
 rcgen = { version = "0.13", optional = true }
 futures = "0.3"
 anyhow = "1"
